--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 
 script:
   - msbuild /p:Configuration=Release /p:Platform="Any CPU" /p:PostBuildEvent="" TinyRedirectServer.sln
-#  - mono ./testrunner/NUnit.ConsoleRunner.3.10.0/tools/nunit3-console.exe ./CompuMaster.Test.xxxx/bin/CompuMaster.Test.xxxx.dll
+#  - mono ./testrunner/NUnit.ConsoleRunner.3.10.0/tools/nunit3-console.exe ./CompuMaster.Test.xxxxx/bin/CompuMaster.Test.xxxxx.dll
