--- a/TinyWebServerAdvanced/TinyWebServerAdvanced.csproj
+++ b/TinyWebServerAdvanced/TinyWebServerAdvanced.csproj
@@ -3,11 +3,11 @@
 	<PropertyGroup>
 		<RootNamespace>CompuMaster.Web</RootNamespace>
 		<AssemblyName>CompuMaster.Web.TinyWebServerAdvanced</AssemblyName>
-		<TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;net48</TargetFrameworks>
-		<Version>2021.7.21.100</Version>
+		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0;net48</TargetFrameworks>
+		<Version>2021.7.28.100</Version>
 		<Authors>Jochen Wezel</Authors>
 		<Company>CompuMaster GmbH</Company>
-		<Copyright>2010-2013,2016,2019,2021 CompuMaster GmbH</Copyright>
+		<Copyright>2010-2021 CompuMaster GmbH</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/CompuMasterGmbH/CompuMaster.Web.TinyWebServerAdvanced</PackageProjectUrl>
 		<PackageIcon>logo_64x64.png</PackageIcon>
@@ -33,7 +33,7 @@
 		<DebugType>full</DebugType>
 		<Optimize>false</Optimize>
 		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<DefineConstants>TRACE;DEBUG</DefineConstants>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 	</PropertyGroup>
@@ -54,13 +54,21 @@
 	<PropertyGroup>
 		<OptionStrict>Off</OptionStrict>
 	</PropertyGroup>
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net48'">
+    <DefineConstants>NET_FRAMEWORK</DefineConstants>
+  </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != 'net48'">
+    <Compile Remove="CertificateStoreUtil.cs" />
+    <Compile Remove="CertificateUtil.cs" />
+    <Compile Remove="TemporaryBoundSslCertificate.cs" />
+  </ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="SslCertBinding.Net" Version="1.0.2" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
 	</ItemGroup>
-	<ItemGroup Condition="'$(TargetFramework)' == 'net46' Or '$(TargetFramework)' == 'net48'">
-		<Reference Include="SslCertBinding.Net" />
+	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+    <PackageReference Include="SslCertBinding.Net" Version="1.0.2" />
+    <Reference Include="SslCertBinding.Net" />
 		<Reference Include="System.Data.DataSetExtensions" />
 		<Reference Include="Microsoft.CSharp" />
 		<Reference Include="System.Net.Http" />
