--- a/TinyRedirectServer/TinyRedirectServer.vbproj
+++ b/TinyRedirectServer/TinyRedirectServer.vbproj
@@ -8,6 +8,7 @@
     <StartupObject>Sub Main</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
+    <Configurations>Debug;Release;CI_CD</Configurations>
   </PropertyGroup>
 	<PropertyGroup>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,6 +31,15 @@
 		<DefineTrace>true</DefineTrace>
 		<OutputPath>bin\Debug\</OutputPath>
 		<NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CI_CD|AnyCPU'">
+	  <PlatformTarget>AnyCPU</PlatformTarget>
+	  <DebugSymbols>true</DebugSymbols>
+	  <DebugType>full</DebugType>
+	  <DefineDebug>true</DefineDebug>
+	  <DefineTrace>true</DefineTrace>
+	  <OutputPath>bin\Debug\</OutputPath>
+	  <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<PlatformTarget>AnyCPU</PlatformTarget>
