--- a/TinyRedirectServerService/TinyRedirectServerService.vbproj
+++ b/TinyRedirectServerService/TinyRedirectServerService.vbproj
@@ -4,7 +4,7 @@
 		<RootNamespace>CompuMaster.Web.TinyRedirectServerService</RootNamespace>
 		<AssemblyName>TinyRedirectServerService</AssemblyName>
 		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0;net48</TargetFrameworks>
-		<Configurations>Debug;Release</Configurations>
+		<Configurations>Debug;Release;CI_CD</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
