--- a/.github/workflows/PublishRelease.yml
+++ b/.github/workflows/PublishRelease.yml
@@ -21,7 +21,7 @@ env:
     # Name of project configuration for build as well as name of the bin output subdirectory (both must match for "dotnet pack" to find compiled files!)
     BUILD_CONFIGURATION: CI_CD
     # Name of build project which creates required output for packaging/deployment
-    BUILD_PROJECT: CompuMaster.IO.Directory/CompuMaster.IO.Directory.vbproj
+    BUILD_PROJECT: TinyWebServerAdvanced/TinyWebServerAdvanced.csproj
     # Name of directory (e.g. "bin") containing the subdirectory (e.g. "CI_CD") with all output files (*.dll)
     BUILD_OUTPUT_BASEDIR: TinyWebServerAdvanced/bin
 
